--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       padding: 0;
       margin: 0;
       width: 220px;
-      background-color: transparent;
+      background-color: #fff;
     }
 
     .sidebar-menu li {
@@ -97,18 +97,11 @@
                       <a href="/index.html">Home</a>
                     </div>
                   </li>
-                  <ul class="sidebar-menu">
-                    <li class="tt-ol-submenu-wrap active">
-                      <div class="tt-ol-submenu-trigger">
-                        <a href="/about.html">About Us</a>
-                      </div>
-                      <ul class="tt-ol-submenu">
-                        <li><a href="/our-team.html">Our Team</a></li>
-                        <li><a href="/mission.html">Our Mission</a></li>
-                        <li><a href="/careers.html">Careers</a></li>
-                      </ul>
-                    </li>
-                  </ul>
+                  <li class="tt-ol-submenu-wrap active">
+                    <div class="tt-ol-submenu-trigger">
+                      <a href="/index.html"></a>
+                    </div>
+                  </li>
 
                   <li class="tt-ol-submenu-wrap">
                     <div class="tt-ol-submenu-trigger">
