--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
                                     </li>
                                     <li class="tt-ol-submenu-wrap">
                                         <div class="tt-ol-submenu-trigger">
-                                            <a href="https://www.gozoop.com/culture">Services</a>
+                                            <a href="">Services</a>
                                         </div>
                                     </li>
                                     <li class="tt-ol-submenu-wrap">
                                         <div class="tt-ol-submenu-trigger">
-                                            <a href="/contact.html">Gallery</a>
+                                            <a href="/gallery.html">Gallery</a>
                                         </div>
                                     </li>
                                     <li class="tt-ol-submenu-wrap">
                                         <div class="tt-ol-submenu-trigger">
-                                            <a href="https://www.gozoop.com/services">Other</a>
+                                            <a href="">Other</a>
                                         </div>
                                     </li>
-                                    <li><a href="https://www.gozoop.com/contact-us">Contact US</a></li>
+                                    <li><a href="/contact.html">Contact US</a></li>
                                 </ul>
                                 <!-- End menu list -->
                             </div>
