--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <div class="container-video">
 
                             <video id="main-video" autoplay loop muted playsinline webkit-playsinline preload="auto"
-                                poster="https://www.gozoop.com/assets/images/new-loader-gif-red.gif?v=1748523936">
+                                poster="">
                                 <!-- old loader - https://gozoop.com/uploads/media/source/bxmvgBICdjPB_preloader.gif -->
                                 <source src="/video/herovideo.mp4" type="video/mp4">
                             </video>
