whay choose changes

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                             <div class="about-box"
                                 style="width:15px; height: 15px; transform: skew(-8deg, -8deg); background-color: #ffc107">
                             </div>
-                            <p class="subtitle-text" style="color: #fff;">ABOUT OUR COMPANY</p>
+                            <p class="subtitle-text" style="color: #fff;">Why Choose Us</p>
                         </div>
                         <h1 class="main-title">We're Partner Of<br>Your Business</h1>
                     </div>
