--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         .footer-widget__links li {
             display: flex;
             /* Align icon and text in a line */
-            align-items: center;
+            align-items: left;
         }
 
         .footer-widget__links li a {
@@ -119,7 +119,7 @@
             /* Or your footer text color */
             font-size: 16px;
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             gap: 2px;
             /* Space between icon and text */
             line-height: 1.5;
