--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             margin: 0;
             transition: display 2s ease;
         }
- 
+
         .tt-ol-submenu {
             opacity: 0;
             visibility: hidden;
@@ -91,7 +91,7 @@
             font-weight: 600;
         }
 
-        
+
 
         /* Animate submenu in on hover */
         .tt-ol-submenu-trigger:hover .tt-ol-submenu {
@@ -102,7 +102,7 @@
             /* move to natural position */
         }
 
-        .tt-ol-submenu li a:hover{
+        .tt-ol-submenu li a:hover {
             color: #b9b8b8;
         }
 
@@ -111,6 +111,11 @@
             display: flex;
             /* Align icon and text in a line */
             align-items: left;
+
+        }
+
+        .footer-widget__links li {
+            margin-left: 0;
         }
 
         .footer-widget__links li a {
@@ -119,7 +124,7 @@
             /* Or your footer text color */
             font-size: 16px;
             display: flex;
-            align-items: flex-start;
+            align-items: left;
             gap: 2px;
             /* Space between icon and text */
             line-height: 1.5;
@@ -1133,8 +1138,8 @@
                             <div class="elementor-element elementor-element-9eceff4 elementor-widget elementor-widget-footer-nav-menu"
                                 data-id="9eceff4" data-element_type="widget" data-widget_type="footer-nav-menu.default">
                                 <div class="elementor-widget-container">
-                                    <div class="footer-widget footer-widget--links" style="">
-                                        <h2 class="footer-widget__title">Quick Links</h2>
+                                    <div class="footer-widget footer-widget--links" style="margin-right: 50px;">
+                                        <h2 class="footer-widget__title" style="margin-left: 10px;">Quick Links</h2>
                                         <!-- /.footer-widget__title -->
                                         <div class="menu-quick-links-container">
                                             <ul class="footer-widget__links">
@@ -1142,12 +1147,13 @@
                                                 <li><a href="#"><i class="fa-solid fa-angles-right"></i>About Us</a>
                                                 </li>
                                                 <li><a href="#"><i class="fa-solid fa-angles-right"></i>Our Service</a>
+                                                <li><a href="#"><i class="fa-solid fa-angles-right"></i>Fleet</a>
+                                                </li>
                                                 </li>
                                                 <li><a href="#"><i class="fa-solid fa-angles-right"></i>Testimonial</a>
                                                 </li>
                                                 <li><a href="#"><i class="fa-solid fa-angles-right"></i>Contact</a></li>
-                                                <!-- <li><a href="#"><i class="fa-solid fa-angles-right"></i>About Us</a></li>
-                                                <li><a href="#"><i class="fa-solid fa-angles-right"></i>About Us</a></li> -->
+                                                <!-- <li><a href="#"><i class="fa-solid fa-angles-right"></i>About Us</a></li> -->
                                             </ul>
 
                                         </div>
