--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@
                                                     <!-- /.sec-title -->
                                                     <div class="cta-one__content__btn wow fadeInUp"
                                                         data-wow-duration="1500ms" data-wow-delay="150ms">
-                                                        <a href="https://bracketweb.com/cityridewp/taxi-booking/"
+                                                        <a href="#"
                                                             class="cityride-btn cityride-btn--border">
                                                             <span class="cityride-btn__icon"><i
                                                                     class="fa-solid fa-car-rear"></i></span>
@@ -1112,7 +1112,7 @@
                                 data-widget_type="footer-about-two.default">
                                 <div class="elementor-widget-container">
                                     <div class="footer-widget footer-widget--about">
-                                        <a href="https://bracketweb.com/cityridewp/"
+                                        <a href="#"
                                             class="footer-widget__logo logo-retina footer-logo"><img loading="lazy"
                                                 decoding="async" src="/images/Alaknanda Transport logo final.png"
                                                 width="103" height="55" alt="Cityride"></a>
