--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
                                             <ul class="tt-ol-submenu">
                                                 <li><a href="/about/team.html">Molasses bulk Transport</a></li>
                                                 <li><a href="/about/history.html">Pan-India Operations</a></li>
-                                                <li><a href="/about/history.html">Safety & Tracking Systems</a></li>
+                                                <li><a href="/about/history.html">Safe and Secure</a></li>
+                                                <li><a href="/about/history.html">GPS tracking system</a></li>
                                             </ul>
                                         </div>
                                     </li>
