--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
         <div class="services2-container-wrapper">
             <div class="services2-header">
                 <span class="services2-tag">Our Service</span>
-                <h1>Electricity Service Offerings</h1>
+                <h1>Mollasses Service Offerings</h1>
                 <p>From residential households to commercial enterprises, we provide reliable, efficient, and
                     sustainable
                     energy solutions.</p>
