--- a/index.html
+++ b/index.html
@@ -528,9 +528,9 @@
 
         <div class="testimonial-content">
             <div class="testimonial-title">
-                <h4 class="subtitle">CUSTOMER STORY</h4>
+                <!-- <h4 class="subtitle">CUSTOMER STORY</h4> -->
                 <h2 class="title">Over 400 Brands Satisfied</h2>
-                <p class="desc">Journey to Success: How Konstant Infosolutions Turned Ideas into Digital Triumphs</p>
+                <!-- <p class="desc">Journey to Success: How Konstant Infosolutions Turned Ideas into Digital Triumphs</p> -->
             </div>
             <div class="slider-full-container">
                 <!-- Testimonial Slider -->
@@ -806,6 +806,7 @@
 
     <!----------- Start Fleet and Why choose Sections ---------------->
     <section class="section-wrapper">
+        <h1 class="main-title" style="color: #fff; text-align: center; padding-bottom: 0;">Why Choose Us</h1>
         <div class="inner-content-blackground-line"></div>
         <div class="content-container">
             <div class="inner-content">
@@ -878,16 +879,7 @@
             <div class="services-container">
                 <div class="header-content">
                     <div class="header-text">
-                        <div style="display: flex; align-items: center; gap: 8px;">
-                            <div class="about-box"
-                                style="width:15px; height: 15px; transform: skew(-8deg, -8deg); background-color: #ffc107">
-                            </div>
-                            <div class="about-box"
-                                style="width:15px; height: 15px; transform: skew(-8deg, -8deg); background-color: #ffc107">
-                            </div>
-                            <p class="subtitle-text" style="color: #fff;">Our Fleet</p>
-                        </div>
-                        <h1 class="main-title" style="color: #f0f0f0;">We're Partner Of<br>Your Business</h1>
+                        <h1 class="main-title" style="color: #f0f0f0; margin-left: 30px; margin-top: 100px;">Our Fleet</h1>
                     </div>
                     <div class="navigation-arrows">
                         <button class="arrow-button" id="prevSlide"><i class="fa-solid fa-chevron-left"></i></button>
@@ -1020,13 +1012,12 @@
     <!----------- End Fleet and why Choose Sections ---------------->
 
 
-
     <!----------- Start Services Sections ---------------->
 
     <section class="service2-section">
         <div class="services2-container-wrapper">
             <div class="services2-header">
-                <span class="services2-tag">Our Service</span>
+                <!-- <span class="services2-tag">Our Service</span> -->
                 <h1>Mollasses Service Offerings</h1>
                 <p>From residential households to commercial enterprises, we provide reliable, efficient, and
                     sustainable
